docs: add github actions to pages home

--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
         <div class="actions">
           <a class="button primary" href="./privacy-policy.html">Privacy Policy</a>
           <a class="button secondary" href="https://github.com/chenghaofan1998/eazy_share">GitHub Repository</a>
+          <a class="button secondary" href="https://github.com/chenghaofan1998/eazy_share/stargazers">Star on GitHub</a>
         </div>
 
         <div class="grid">
@@ -168,13 +169,16 @@
             <strong>Open source</strong>
             <p>
               View the source on GitHub. If it helps, please give the project a
-              <span class="star">Star</span>.
+              <span class="star">Star</span> or create your own
+              <span class="star">Fork</span>.
             </p>
           </div>
         </div>
 
         <footer>
           Repository: <a href="https://github.com/chenghaofan1998/eazy_share">github.com/chenghaofan1998/eazy_share</a>
+          <br />
+          If Eazy Share is useful to you, please star or fork the project on GitHub.
         </footer>
       </section>
     </main>
